--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,5 @@
+/** @format */
+
 .team-heading {
   background-color: #e84855;
   color: #ffffff;
@@ -26,7 +28,7 @@
 .card-body {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-around;
   background-color: #f6f7f8;
 }
 
